--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="img/favicon.png" type="image/png">
-
-  <title>Open Router Services Open Layers</title>
+<title>Open Router Services Open Layers</title>
+<style>
+	.map {
+		width: 100%;
+		height: 400px;
+	}
+</style>
 </head>
 <body>
   <header>
